manifest/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olive-back-service
spec:
  type: ClusterIP
  selector:
    app: olive-back
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080  # 컨테이너 내부의 실제 포트
